--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
+  "devDependencies": {
+    "serverless": "^2.6.0",
+    "serverless-offline": "^6.8.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
