--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
   pre_build:
     commands:
       - npm install
+      - npm install -g serverless
   build:
     commands:
       - CI=true npm run test
